SERVER-51526 Hybrid index builds can miss writes and crash in the event of a well-timed WriteConflictException

(cherry picked from commit c53dc2c22b5dbecb561bda893d374085de5c54d1)
(cherry picked from commit 832f6f4e90ec9e6bd072b3fc94cd3cf11b8021fd)